# aprk-os

./: .gitignore  Cargo.toml  Makefile  PLAN_PHASE_2.md  disk.tar
.cargo/: config.toml
arch/arm64/: build.rs
arch/arm64/src/: boot.S  context.S  context.rs  cpu.rs  exception.S  exception.rs  gic.rs  lib.rs  mmu.rs  timer.rs  uart.rs
assets/: logo.tga
disk_root/: hello  hello.txt
kernel/: Cargo.toml
kernel/src/: fs.rs  loader.rs  main.rs  shell.rs  syscall.rs
kernel/src/drivers/: gpu.rs  mod.rs  virtio.rs  virtio_blk.rs
kernel/src/fs/: mod.rs
kernel/src/mm/: heap.rs  mod.rs  pmm.rs
kernel/src/sched/: mod.rs
scripts/: make-disk.sh  qemu-run.sh
user/hello/src/: main.rs
user/lib/src/: lib.rs
