# =============================================================================
# APRK OS - Cargo Workspace
# =============================================================================
# A modern operating system kernel written in Rust for ARM64 architecture.
# Created by APRK
# =============================================================================

[workspace]
resolver = "2"
members = [
    "kernel",
    "arch/arm64",
    "user/lib",
    "user/hello",
]

[workspace.package]
version = "0.0.1"
authors = ["APRK"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/aprk/aprk-os"

[workspace.dependencies]
# Shared dependencies across the workspace
spin = "0.9"
bitflags = "2.4"
log = "0.4"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", branch = "master", default-features = false }
virtio-drivers = "0.7"

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
debug = false
