# =============================================================================
# APRK OS - Kernel Crate
# =============================================================================
# The core kernel implementation
# =============================================================================

[package]
name = "aprk-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aprk-arch-arm64 = { path = "../arch/arm64" }
linked_list_allocator = "0.10.5"
spin.workspace = true
